Using BehaviourSubject instead of Subject for authors and categories list to have support of list loading from cache in mobile.

--- a/nativescript/app/app.android.scss
+++ b/nativescript/app/app.android.scss
@@ -7,5 +7,10 @@
 // Platform adjustments
 @import 'theme-core-scss/themes/core/platforms/index.android';
 
-// app style
+// App styles
 @import "app-common";
+
+// Android specific app styles
+.action-bar-icon {
+  width: 60;
+}
