--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -16,6 +16,14 @@ body {
   border-radius: 5px;
   box-shadow: 0 5px 10px $box-shadow-color;
   margin: 15px 0;
+  transition: all 500ms;
+  position: relative;
+  left: 0;
+
+  &.removed {
+    left: 9999px;
+    opacity: 0;
+  }
 
   &:first-child {
     margin-top: 0;
