Minor style changes for web and mobile platforms.

--- a/nativescript/app/_variables.scss
+++ b/nativescript/app/_variables.scss
@@ -11,6 +11,7 @@ $secondary: $c-secondary;
 $accent: $c-accent;
 
 // Nativescript core theme variable overrides.
+$btn-color: $c-accent;
 $item-active-color:$accent;
 $side-drawer-header-background: $accent;
 $side-drawer-background: $c-grey-200;
