feat(Nativescript): Upgrade nativescript-theme-core to 0.2.3  and related changes. Upgrade tns-core-modules and runtime to 2.4.0

--- a/nativescript/app/app.android.scss
+++ b/nativescript/app/app.android.scss
@@ -1,14 +1,14 @@
 // Theme variables cusomizations
-@import "variables";
+@import "scss/variables";
 
 // Core CSS
-@import 'theme-core-scss/index';
+@import "nativescript-theme-core/scss/index";
 
-// Platform adjustments
-@import 'theme-core-scss/themes/core/platforms/index.android';
+// Style adjustments for Android
+@import "nativescript-theme-core/scss/themes/core/platforms/index.android";
 
-// App styles
-@import "app-common";
+// App styles common to Android and iOS platforms.
+@import "scss/app-common";
 
 // Android specific app styles
 .action-bar-icon {
