--- a/nativescript/app/app.ios.scss
+++ b/nativescript/app/app.ios.scss
@@ -1,11 +1,13 @@
 // Theme variables cusomizations
-@import "variables";
+@import "scss/variables";
 
 // Core CSS
-@import 'theme-core-scss/index';
+@import "nativescript-theme-core/scss/index";
 
-// Platform adjustments
-@import 'theme-core-scss/themes/core/platforms/index.ios';
+// Style adjustments for iOS
+@import "nativescript-theme-core/scss/themes/core/platforms/index.ios";
 
-// app style
-@import "app-common";
+// App styles common to Android and iOS platforms.
+@import "scss/app-common";
+
+// iOS specific app styles
