Fixed shripalsoni04/nativescript-angular-web-starter#3 and fixed shripalsoni04/nativescript-angular-web-starter#4 but still some warnings remaining.

--- a/nativescript/app/modules/categories/categories-list.component.html
+++ b/nativescript/app/modules/categories/categories-list.component.html
@@ -7,7 +7,7 @@
         class="list-group"
         [items]="cvm.categories$ | async"
         [visibility]="cvm.lstCategories.length ? 'visible' : 'collapsed'">
-      <template let-item="item">
+      <ng-template let-item="item">
         <StackLayout
             class="list-group-item"
             (tap)="showQuotesByCategory(item.id)">
@@ -17,7 +17,7 @@
               textWrap="true">
           </Label>
         </StackLayout>
-      </template>
+      </ng-template>
     </ListView>
     <ActivityIndicator
       class="activity-indicator"
