--- a/nativescript/app/modules/authors/authors-list.component.html
+++ b/nativescript/app/modules/authors/authors-list.component.html
@@ -7,7 +7,7 @@
         class="list-group"
         [items]="cvm.authors$ | async"
         [visibility]="cvm.lstAuthors.length ? 'visible' : 'collapsed'">
-      <template let-item="item">
+      <ng-template let-item="item">
         <StackLayout
             class="list-group-item"
             (tap)="showQuotesByAuthor(item.id)">
@@ -17,7 +17,7 @@
               textWrap="true">
           </Label>
         </StackLayout>
-      </template>
+      </ng-template>
     </ListView>
     <ActivityIndicator
       class="activity-indicator"
