--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "./scss/variables";
-@import "../node_modules/angular2-mdl/scss/material-design-lite";
+@import "../node_modules/@angular-mdl/core/scss/material-design-lite";
 
 body {
   font-family: $font-family;
